Added & Designed Activity Form

--- a/src/app/component/user/user.component.html
+++ b/src/app/component/user/user.component.html
@@ -58,6 +58,7 @@
                     type="button"
                     label="Upload Activity"
                     class="p-button-raised p-button-warning mr-1 md:mr-3"
+                    (click)="openActivityUploadPage()"
                   ></button>
                 </div>
               </div>
