--- a/src/app/pages/activity/paper/paper.component.html
+++ b/src/app/pages/activity/paper/paper.component.html
@@ -1,1 +1,142 @@
-<p>paper works!</p>
+<section class="mt-8">
+  <div class="surface-card p-4">
+    <form [formGroup]="paperForm" class="grid formgrid p-fluid">
+      <div class="field mb-4 col-12 md:col-6">
+        <label for="eventName" class="font-medium text-900">Event Name</label>
+        <input
+          id="eventName"
+          type="text"
+          pinputtext
+          formControlName="eventName"
+          class="p-inputtext p-component p-element"
+        />
+      </div>
+      <div class="field mb-4 col-12 md:col-6">
+        <label for="eventVenue" class="font-medium text-900">
+          Event Venue (With Institution Location)
+        </label>
+        <input
+          id="eventVenue"
+          type="text"
+          pinputtext
+          formControlName="eventVenue"
+          class="p-inputtext p-component p-element"
+        />
+      </div>
+      <div class="field mb-4 col-12 md:col-6">
+        <label for="title" class="font-medium text-900">Paper Title</label>
+        <input
+          id="title"
+          type="text"
+          pinputtext
+          formControlName="title"
+          class="p-inputtext p-component p-element"
+        />
+      </div>
+      <div class="field mb-4 col-12 md:col-6">
+        <label for="type" class="font-medium text-900">
+          Inside / Outside KEC
+        </label>
+        <p-dropdown
+          formControlName="type"
+          [options]="data"
+          [showClear]="true"
+          id="venue"
+        ></p-dropdown>
+      </div>
+      <div class="field mb-4 col-12 md:col-6">
+        <label for="eventDate" class="font-medium text-900">Event Date</label>
+        <p-calendar
+          dateFormat="dd-mm-yy"
+          id="eventDate"
+          formControlName="eventDate"
+          inputId="dateformat"
+        ></p-calendar>
+      </div>
+      <div class="field mb-4 col-12 md:col-6">
+        <label for="eventMode" class="font-medium text-900">Event Mode</label>
+        <p-dropdown
+          [options]="availableModes"
+          [showClear]="true"
+          formControlName="mode"
+          id="eventMode"
+        ></p-dropdown>
+      </div>
+      <div class="field mb-4 col-12 md:col-6">
+        <label for="position" class="font-medium text-900">
+          Prize / Position
+        </label>
+        <p-dropdown
+          [options]="availablePosition"
+          placeholder="Select your Level"
+          optionLabel="label"
+          [showClear]="true"
+          formControlName="position"
+          id="position"
+          (onChange)="onPositionChange($event)"
+        ></p-dropdown>
+      </div>
+      <div class="field mb-4 col-12 md:col-6" *ngIf="isPrizeWon">
+        <label for="prizeAmount" class="font-medium text-900">
+          Prize Amount
+        </label>
+        <p-inputNumber
+          mode="currency"
+          inputId="currency-india"
+          currency="INR"
+          currencyDisplay="code"
+          locale="en-IN"
+          id="prizeAmount"
+          formControlName="prizeAmount"
+        >
+        </p-inputNumber>
+      </div>
+      <div class="field mb-4 col-12 md:col-6">
+        <label for="mark" class="font-medium text-900">Mark</label>
+        <input
+          id="mark"
+          type="number"
+          pinputtext
+          formControlName="mark"
+          class="p-inputtext p-component p-element"
+          readonly
+        />
+      </div>
+      <div class="field my-4 col-12 flex">
+        <p-fileUpload
+          #fubauto
+          mode="basic"
+          name="demo[]"
+          accept="image/*"
+          maxFileSize="1000000"
+          (onUpload)="onUpload($event)"
+          class="mr-3"
+          [auto]="true"
+          chooseLabel="Upload Proof"
+        ></p-fileUpload>
+        <img *ngIf="imageDisplay" [src]="imageDisplay" alt="Proof" />
+      </div>
+      <div class="surface-border border-top-3 opacity-50 mb-3 col-12"></div>
+      <div class="col-12 flex justify-content-center">
+        <button
+          pButton
+          pRipple
+          type="button"
+          label="Submit"
+          class="p-button-raised p-button-success w-auto"
+          *ngIf="!isLoading"
+          (click)="onFormSubmitted()"
+          [disabled]="paperForm.invalid"
+        ></button>
+        <p-progressSpinner
+          [style]="{ width: '50px', height: '50px' }"
+          styleClass="custom-spinner"
+          strokeWidth="8"
+          fill="var(--surface-ground)"
+          animationDuration=".5s"
+          *ngIf="isLoading"
+        ></p-progressSpinner>
+      </div>
+    </form>
+  </div>
+</section>
