--- a/src/app/pages/activity/placement/placement.component.html
+++ b/src/app/pages/activity/placement/placement.component.html
@@ -1,1 +1,108 @@
-<p>placement works!</p>
+<section class="mt-8">
+  <div class="surface-card p-4">
+    <form [formGroup]="placementForm" class="grid formgrid p-fluid">
+      <div class="field mb-4 col-12 md:col-6">
+        <label for="companyName" class="font-medium text-900">
+          Company Name
+        </label>
+        <input
+          id="companyName"
+          formControlName="companyName"
+          type="text"
+          pinputtext
+          class="p-inputtext p-component p-element"
+        />
+      </div>
+      <div class="field mb-4 col-12 md:col-6">
+        <label for="companyVenue" class="font-medium text-900">
+          Company Location
+        </label>
+        <input
+          id="companyVenue"
+          type="text"
+          pinputtext
+          formControlName="companyVenue"
+          class="p-inputtext p-component p-element"
+        />
+      </div>
+      <div class="field mb-4 col-12 md:col-6">
+        <label for="placedType" class="font-medium text-900">
+          Placed Type
+        </label>
+        <p-dropdown
+          formControlName="placedType"
+          [options]="data"
+          [showClear]="true"
+          id="placedType"
+        ></p-dropdown>
+      </div>
+      <div class="field mb-4 col-12 md:col-6">
+        <label for="placedDate" class="font-medium text-900">Placed Date</label>
+        <p-calendar
+          dateFormat="dd-mm-yy"
+          id="placedDate"
+          formControlName="placedDate"
+          inputId="dateformat"
+        ></p-calendar>
+      </div>
+      <div class="field mb-4 col-12 md:col-6">
+        <label for="roundsShortListed" class="font-medium text-900">
+          Number of rounds shortlisted
+        </label>
+        <p-inputNumber
+          formControlName="roundsShortListed"
+          id="roundsShortListed"
+          inputId="minmax"
+          mode="decimal"
+        >
+        </p-inputNumber>
+      </div>
+      <div class="field mb-4 col-12 md:col-6">
+        <label for="mark" class="font-medium text-900"> Mark </label>
+        <input
+          id="mark"
+          formControlName="mark"
+          type="text"
+          pinputtext
+          class="p-inputtext p-component p-element"
+          readonly
+        />
+      </div>
+      <div class="field my-4 flex col-12">
+        <p-fileUpload
+          #fubauto
+          mode="basic"
+          name="demo[]"
+          accept="image/*"
+          maxFileSize="1000000"
+          (onUpload)="onUpload($event)"
+          [auto]="true"
+          chooseLabel="Uplaod Proof"
+          class="mr-3"
+        ></p-fileUpload>
+        <img *ngIf="imageDisplay" [src]="imageDisplay" alt="Proof" />
+      </div>
+      <div class="surface-border border-top-3 opacity-50 mb-3 col-12"></div>
+      <div class="col-12 flex justify-content-center">
+        <button
+          pButton
+          pRipple
+          type="button"
+          label="Submit"
+          class="p-button-raised p-button-success w-auto"
+          *ngIf="!isLoading"
+          (click)="onFormSubmitted()"
+          [disabled]="placementForm.invalid"
+        ></button>
+        <p-progressSpinner
+          [style]="{ width: '50px', height: '50px' }"
+          styleClass="custom-spinner"
+          strokeWidth="8"
+          fill="var(--surface-ground)"
+          animationDuration=".5s"
+          *ngIf="isLoading"
+        ></p-progressSpinner>
+      </div>
+    </form>
+  </div>
+</section>
