--- a/src/app/pages/activity/workshop/workshop.component.html
+++ b/src/app/pages/activity/workshop/workshop.component.html
@@ -1,1 +1,108 @@
-<p>workshop works!</p>
+<section class="mt-8">
+  <div class="surface-card p-4">
+    <form [formGroup]="workshopForm" class="grid formgrid p-fluid">
+      <div class="field mb-4 col-12 md:col-6">
+        <label for="eventName" class="font-medium text-900"> Event Name </label>
+        <input
+          id="eventName"
+          type="text"
+          formControlName="eventName"
+          pinputtext
+          class="p-inputtext p-component p-element"
+        />
+      </div>
+      <div class="field mb-4 col-12 md:col-6">
+        <label for="eventVenue" class="font-medium text-900">
+          Event Location (with Insitution Name)
+        </label>
+        <input
+          id="eventVenue"
+          formControlName="eventVenue"
+          type="text"
+          pinputtext
+          class="p-inputtext p-component p-element"
+        />
+      </div>
+      <div class="field mb-4 col-12 md:col-6">
+        <label for="workshopName" class="font-medium text-900">
+          Workshop Name
+        </label>
+        <input
+          id="workshopName"
+          formControlName="workshopName"
+          type="text"
+          pinputtext
+          class="p-inputtext p-component p-element"
+        />
+      </div>
+      <div class="field mb-4 col-12 md:col-6">
+        <label for="mode" class="font-medium text-900"> Workshop Mode </label>
+        <p-dropdown
+          [options]="mode"
+          [showClear]="true"
+          id="mode"
+          formControlName="mode"
+        ></p-dropdown>
+      </div>
+      <div class="field mb-4 col-12 md:col-6">
+        <label for="eventDateRange" class="font-medium text-900">
+          Workshop Date Range
+        </label>
+        <p-calendar
+          dateFormat="dd-mm-yy"
+          id="eventDateRange"
+          formControlName="eventDateRange"
+          selectionMode="range"
+          [readonlyInput]="true"
+          inputId="range"
+        ></p-calendar>
+      </div>
+      <div class="field mb-4 col-12 md:col-6">
+        <label for="mark" class="font-medium text-900"> Mark </label>
+        <input
+          id="mark"
+          formControlName="mark"
+          type="text"
+          pinputtext
+          class="p-inputtext p-component p-element"
+          readonly
+        />
+      </div>
+      <div class="field my-4 flex col-12">
+        <p-fileUpload
+          #fubauto
+          mode="basic"
+          name="demo[]"
+          accept="image/*"
+          maxFileSize="1000000"
+          (onUpload)="onUpload($event)"
+          [auto]="true"
+          chooseLabel="Upload Proof"
+          class="mr-3"
+        ></p-fileUpload>
+        <img *ngIf="imageDisplay" [src]="imageDisplay" alt="Proof" />
+      </div>
+      <div class="surface-border border-top-3 opacity-50 mb-3 col-12"></div>
+      <div class="col-12 flex justify-content-center">
+        <button
+          pButton
+          pRipple
+          type="button"
+          label="Submit"
+          class="p-button-raised p-button-success w-auto"
+          *ngIf="!isLoading"
+          (click)="onFormSubmitted()"
+          [disabled]="workshopForm.invalid"
+        ></button>
+        <p-progressSpinner
+          [style]="{ width: '50px', height: '50px' }"
+          styleClass="custom-spinner"
+          strokeWidth="8"
+          fill="var(--surface-ground)"
+          animationDuration=".5s"
+          *ngIf="isLoading"
+        ></p-progressSpinner>
+      </div>
+    </form>
+  </div>
+</section>
