--- a/src/app/pages/activity/placement/placement.component.html
+++ b/src/app/pages/activity/placement/placement.component.html
@@ -21,7 +21,7 @@
           id="companyVenue"
           type="text"
           pinputtext
-          formControlName="companyVenue"
+          formControlName="companyLocation"
           class="p-inputtext p-component p-element"
         />
       </div>
