--- a/src/app/pages/activity/sports/sports.component.html
+++ b/src/app/pages/activity/sports/sports.component.html
@@ -39,7 +39,7 @@
         </label>
         <p-dropdown
           [options]="eventLevel"
-          formControlName="level"
+          formControlName="eventLevel"
           [showClear]="true"
           id="level"
         ></p-dropdown>
