--- a/src/app/pages/activity/techno-managerial/techno-managerial.component.html
+++ b/src/app/pages/activity/techno-managerial/techno-managerial.component.html
@@ -24,11 +24,11 @@
         />
       </div>
       <div class="field mb-4 col-12 md:col-6">
-        <label for="mode" class="font-medium text-900"
-          >Inside / Outside KEC</label
-        >
+        <label for="mode" class="font-medium text-900">
+          Inside / Outside KEC
+        </label>
         <p-dropdown
-          formControlName="mode"
+          formControlName="type"
           [options]="data"
           [showClear]="true"
           id="mode"
