Added user-edit detail functionality

--- a/src/app/component/user/user.component.html
+++ b/src/app/component/user/user.component.html
@@ -48,6 +48,7 @@
                     type="button"
                     label="Edit Detail"
                     class="p-button-raised p-button-success mr-1 md:mr-3"
+                    (click)="navigateToEditPage()"
                   ></button>
                   <button
                     pButton
