Changed activity data as model

--- a/src/app/pages/activity/activity.component.html
+++ b/src/app/pages/activity/activity.component.html
@@ -21,7 +21,7 @@
                 </span>
               </div>
               <ul
-                class="list-none p-0 m-0 overflow-hidden fadeinup animation-duration-500"
+                class="list-none p-0 m-0 overflow-hidden fadein animation-duration-500"
               >
                 <li *ngFor="let activity of activities">
                   <a
